--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -1,2 +1,25 @@
-
+.experience{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 1rem;
+    padding: 40px 15px;
+ }
+ .experience .card {
+    width: 800px;
+    max-width: 90%;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    border-radius: 12px;
+    font-size: 1.3rem;
+    background-image: url('/public/green-gobbler.png');
+    background-color: #BB9981;
+ }
+ 
+ .experience .card div {
+    margin: 20px auto;
+    padding: 10px 0;
+    max-width: 80%;
+ }
   
