--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,18 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 20px;
   }
   
   img {
-    width: 150px;
+    border-radius: 50%;
+    width: 225px;
     margin: 20px;
-    border-radius: 20px;
   }
-  h2 {
-    color: black;
-    text-shadow: 2px 2px rgba(240, 248, 255, 0.241);
-  }
-  a {
-    color: #0b0089;
-    text-decoration: none;
-  }
+
+
+
+  
