--- a/src/components/Education.css
+++ b/src/components/Education.css
@@ -14,11 +14,10 @@
     border-radius: 12px;
     font-size: 1.3rem;
     background-image: url('/public/green-gobbler.png');
-    background-color: #BB9981;
+    background-color: #5EAAA8;
  }
  
  .education .card div {
     margin: 20px auto;
-    padding: 10px 0;
     max-width: 80%;
  }
