--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -11,15 +11,14 @@
     padding-left: 20px;
     padding-right: 20px;
     text-align: center;
-    border-radius: 12px;
+    
     font-size: 1.3rem;
     background-image: url('/public/green-gobbler.png');
-    background-color: #BB9981;
+    background-color: #5EAAA8;
  }
  
  .experience .card div {
     margin: 20px auto;
-    padding: 10px 0;
     max-width: 80%;
  }
   
