--- a/src/components/More.css
+++ b/src/components/More.css
@@ -23,13 +23,16 @@
  }
 
 .more .card img {
-   width: 200px;
+   width: 100px;
    margin: 10px;
    border-radius: 0px;
  }
 
  .libreries {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+   display: flex;
+   flex-wrap: wrap;
+   flex-direction: row;
+   align-items: center;
+   align-content: center;
+   justify-content: space-around;
  }
